examples/should_pass/test_send.anvil
chan ch = {
    right res : (logic@#1)
}

proc sender(ch : left ch) =
    reg cycle_counter : logic[4]

    loop {
        set cycle_counter := !cycle_counter + 4'b0001
    }

    loop {
        send ch::res(1'b1)=>
        dprint "Sent 1 in cycle %d" (!cycle_counter)
    }


proc test_send() =
    chan ch_in -- ch_out : ch
    spawn sender(ch_in)
    reg cycle_counter : logic[4]

    loop {
        set cycle_counter := !cycle_counter + 4'b0001
    }

    loop {
        let x = recv ch_out::res in
        x=>
        dprint "Received %d in cycle %d" (x, !cycle_counter)
    }
